Fix bug with restaurant width on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -678,7 +678,7 @@ article {
         margin: auto;
         background: rgba(0, 0, 0, 0.3);
         position: relative;
-        max-width: 65vw;
+        max-width: 1200px;
         display: grid;
         // grid-gap: 0.8em;
         //Add span styles to position
